[package]
name = "ok"
version = "0.1.0"
authors = ["Denis Evsyukov <denis@evsyukov.org>"]
edition = "2018"
license = "MIT"
description = ".ok folder profiles"
homepage = "https://www.juev.org"
repository = "https://github.com/juev/ok"
readme = "README.md"
keywords = ["bash", "zsh", "cli"]

[dependencies]
getopts = "0.2"
colored = "1.9"
regex = "1"